# mars

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  mergify.yml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  mergify.yml
.github/actions/setup-cross/: action.yml
.github/workflows/: dev.yml  main.yml  release.yml  rust.yml
common/configs/: Cargo.toml
common/configs/src/: eth.rs  lib.rs  log.rs  storage.rs
common/configs/tests/it/: config.rs  main.rs
common/eth/: Cargo.toml
common/eth/src/: abi.rs  address.rs  bytes.rs  decode.rs  encode.rs  erc.rs  lib.rs
common/eth/src/jsonrpc/: eth.rs  mod.rs
common/eth/src/jsonrpc/types/: block.rs  bytes.rs  log.rs  mod.rs  receipt.rs  trace.rs  transaction.rs
common/eth/tests/it/: decode.rs  encode.rs  main.rs
common/exceptions/: Cargo.toml
common/exceptions/src/: exception_code.rs  exception_into.rs  lib.rs  retry.rs
common/formats/: Cargo.toml
common/formats/src/: csv.rs  lib.rs  parquet.rs
common/storages/: Cargo.toml
common/storages/src/: csv.rs  lib.rs  parquet.rs  storage.rs  txt.rs
common/tracings/: Cargo.toml
common/tracings/src/: lib.rs  tracer.rs
docker/: Dockerfile
docker/cross/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.aarch64-unknown-linux-musl  Dockerfile.x86_64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-musl  openssl.sh
ethetl/: Cargo.toml  README.md
ethetl/src/: lib.rs
ethetl/src/chain/: syncing.rs
ethetl/src/chains/: mod.rs
ethetl/src/chains/eth/: block_number.rs  receipts.rs
ethetl/src/configs/: config.rs
ethetl/src/contexts/: context.rs  mod.rs  progress.rs
ethetl/src/eth/: blocks.rs  contracts.rs  mod.rs  receipts.rs  syncing.rs  traces.rs
ethetl/src/etl/: batch.rs  mod.rs  normal.rs  pipeline.rs  stream.rs  worker.rs
ethetl/src/exporters/: blocks.rs  ens.rs  file.rs  logs.rs  mod.rs  nft_transfers.rs  pipeline.rs  receipts.rs  token_eth_transfers.rs  token_nft_transfers.rs  token_transfer.rs  token_transfers.rs  traces.rs  transactions.rs  worker.rs
ethetl/src/exporters/eth/: blocks.rs  ens.rs  logs.rs  receipts.rs  token_transfers.rs  transactions.rs
ethetl/src/stream/: mod.rs  stream.rs
ethetl/src/workers/: blocks.rs  mod.rs  receipts.rs
ethetl/tests/it/: common.rs  main.rs
ethetl/tests/it/exporters/: blocks.rs  mod.rs  receipts.rs
ethetl/tests/it/exporters/eth/: blocks.rs  mod.rs  receipts.rs
ethetl/tests/it/fetchers/: blocks.rs  mod.rs  receipts.rs
ethetl/tests/it/testdata/: blocks_50010_50010.txt  receipts_50010_50010.txt  transactions_15138828_15138852.parquet
ethetl/tests/it/testdata/15138828_15138852/: .transaction_hashes.txt  blocks.csv  blocks.parquet  receipts.csv  receipts.parquet  transactions.parquet
ethetl/tests/it/testdata/15340159_15340160/: blocks.parquet  ens.parquet  logs.parquet  receipts.csv  receipts.parquet  token_transfers.parquet  transactions.csv  transactions.parquet
ethetl/tests/it/testdata/blocks/: blocks_15340159_15340160.csv  blocks_16600001_16600002.csv  blocks_16600001_16600002.parquet
ethetl/tests/it/testdata/ens/: ens_15340159_15340160.csv  ens_16600001_16600002.csv  ens_16600001_16600002.parquet
ethetl/tests/it/testdata/logs/: logs_15340159_15340160.csv  logs_16600001_16600002.csv  logs_16600001_16600002.parquet
ethetl/tests/it/testdata/receipts/: receipts_16600001_16600002.csv  receipts_16600001_16600002.parquet
ethetl/tests/it/testdata/token_transfers/: token_transfers_15340159_15340160.csv  token_transfers_16600001_16600002.csv  token_transfers_16600001_16600002.parquet
ethetl/tests/it/testdata/transactions/: _transactions_hash_15340159_15340160.txt  _transactions_hash_16600001_16600002.txt  transactions_16600001_16600002.csv  transactions_16600001_16600002.parquet
schemas/databend/: 1_schema.sql  2_example.sql  2_ingest.sql  README.md  blocks.sql  ens.sql  eth_token_transfer.sql  logs.sql  nft_token_transfer.sql  nft_transfers.sql  receipts.sql  token_transfer.sql  token_transfers.sql  transactions.sql  transactios.sql
schemas/snowflake/: 1_schema.sql  2_example.sql  README.md
scripts/deploy/: ethetl_config_spec.toml
scripts/setup/: dev_setup.sh
src/: lib.rs
src/configs/: config.rs  mod.rs
src/contexts/: context.rs
src/eth/: blocks.rs  receipts.rs
src/exceptions/: exception_code.rs  exception_into.rs  mod.rs
src/exporters/: blocks.rs  mod.rs  receipts.rs
src/tracings/: tracer.rs
src/workers/: blocks.rs  context.rs  mod.rs  progress.rs  receipts.rs
tests/it/: common.rs  main.rs
tests/it/fetchers/: blocks.rs  receipts.rs
tests/it/testdata/: blocks.txt
tests/it/workers/: blocks.rs  receipts.rs
