[package]
name = "ethetl"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "ethetl"
path = "bin/ethetl.rs"
doctest = false
test = false

[dependencies]
# Workspace dependencies
common-configs = { path = "../common/configs" }
common-eth = { path = "../common/eth" }
common-exceptions = { path = "../common/exceptions" }
common-storages = { path = "../common/storages" }

arrow2 = { version = "0.12.0", features = ["io_csv"]}
clap = { version = "3.2.5", features = ["derive", "env"] }
deadqueue = "0.2.3"
env_logger = "0.9.0"
futures = "0.3"
log = "0.4.0"
opendal = { version = "0.11.3", features = ["retry", "compress"] }
paste = "1.0.7"
percentage-rs = "0.1.6"
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
web3 = "0.18.0"
jsonrpsee = { version = "0.15", features = ["full"] }

tracing = "0.1"
opentelemetry = "0.17"

[dev-dependencies]
goldenfile = "1.3.0"
