[package]
name = "ethetl"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "ethetl"
path = "bin/ethetl.rs"
doctest = false
test = false

[[bin]]
name = "ethetl-stream"
path = "bin/ethetl_stream.rs"
doctest = false
test = false

[dependencies]
# Workspace dependencies
common-configs = { path = "../common/configs" }
common-eth = { path = "../common/eth" }
common-exceptions = { path = "../common/exceptions" }
common-storages = { path = "../common/storages" }

arrow2 = { version = "0.16.0", features = ["io_csv"]}
deadqueue = "0.2.3"
env_logger = "0.9.0"
log = "0.4.0"
opendal = { version = "0.28.0", features = ["compress"] }
percentage-rs = "0.1.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
ticker = "0.1.0"
tokio = { version = "1.19.2", features = ["full"] }
web3 = "0.18.0"


[dev-dependencies]
goldenfile = "1.3.0"
