[package]
name = "common-configs"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
# Workspace dependencies
common-exceptions = { path = "../exceptions" }

clap = { version = "3.2.5", features = ["derive", "env"] }
serde = { version = "1.0.137", features = ["derive"] }
serfig = "0.0.2"

[dev-dependencies]
