[package]
name = "common-configs"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
# Workspace dependencies
common-exceptions = { path = "../exceptions" }

clap = { version = "4.1.7", features = ["derive", "env"] }
serde = { version = "1.0.137", features = ["derive"] }
serfig = "0.0.3"

[dev-dependencies]

pretty_assertions = "1.3.0"
