[package]
name = "common-eth"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
# Workspace dependencies
common-exceptions = { path = "../exceptions" }
arrayvec = { version = "0.7", features = ["serde"] }
ethereum-types = "0.13"
ethnum = { version = "1", default-features = false, features = ["serde"] }
jsonrpsee = { version = "0.15", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
bytes = "1"
hex = "0.4"

[dev-dependencies]
