[package]
name = "common-storages"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
# Workspace dependencies
common-configs = { path = "../configs" }
common-exceptions = { path = "../exceptions" }

arrow2 = { version = "0.12.0", features = ["io_csv", "io_parquet", "io_parquet_compression"]}
backon = "0.0.2"
opendal = { version = "0.11.4", features = ["retry", "compress"] }
serde = { version = "1.0.137", features = ["derive"] }


[dev-dependencies]
