[package]
name = "common-storages"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
# Workspace dependencies
common-configs = { path = "../configs" }
common-exceptions = { path = "../exceptions" }

arrow2 = { version = "0.12.0", features = ["io_csv", "io_parquet", "io_parquet_compression"]}
opendal = { version = "0.19", features = ["compress"] }


[dev-dependencies]
