[package]
name = "common-storages"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
# Workspace dependencies
common-configs = { path = "../configs" }
common-exceptions = { path = "../exceptions" }

arrow2 = { version = "0.16.0", features = ["io_parquet", "io_parquet_compression"]}
opendal = { version = "0.28.0"}


[dev-dependencies]
