[package]
name = "common-tracings"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
# Workspace dependencies
common-exceptions = { path = "../exceptions" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.17"
opentelemetry = "0.17"
opentelemetry-jaeger = "0.16"

[dev-dependencies]
